--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,13 +3,13 @@ name: github pages
 on:
   push:
     branches:
-      - master
+      - github-actions-test
 
 jobs:
   build-deploy:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@github-actions-test
 
       - name: build
         uses: actions/setup-node@v1
